MDEV-11553 Can't restore a PERSISTENT column that uses DATE_FORMAT()

3-argument form of DATE_FORMAT